--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,7 @@ dependencies = [
     "aiohttp>=3.8.0",
     "python-dotenv>=1.0.0",
     "bibtexparser>=1.4.0",
+    "python-docx>=1.0.0",
 ]
 
 [project.optional-dependencies]
